src/tests/unary-operators/11.txt
unary-operators/11.c:2:2: error: lvalue required as decrement operand
 	--'a';
 	^
